@@ -10,11 +10,11 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import com.tt.admin.entity.AdminUser;
-import com.tt.admin.entity.AdminUserPermission;
+import com.tt.admin.entity.dao.AdminPermission;
+import com.tt.admin.entity.dao.AdminUser;
 import com.tt.admin.mapper.AdminUserMapper;
-import com.tt.admin.mapper.AdminUserPermissionMapper;
 import com.tt.admin.repository.adminuser.AdminPermissionReposity;
+import com.tt.admin.util.JsonUtil;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,19 +22,25 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class AdminUserDetailsService  implements UserDetailsService  {
+public class AdminUserDetailsService implements UserDetailsService {
 
     private final AdminUserMapper adminUserMapper;
 
     private final AdminPermissionReposity pReposity;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        AdminUser adminUser = adminUserMapper.getUserByUsername(username);;
+        AdminUser adminUser = adminUserMapper.getUserByUsername(username);
         if (adminUser == null) {
             log.error("User not found: {}", username);
             throw new UsernameNotFoundException("User not found: " + username);
         }
-        List<SimpleGrantedAuthority> authorities =  pReposity.selectListByUid(adminUser.getId()).stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());;
+        List<SimpleGrantedAuthority> authorities = pReposity.selectListByUid(adminUser.getId()).stream()
+            .map(AdminPermission::getCode)
+            .map(SimpleGrantedAuthority::new)
+            .toList();
+
+        log.info("============ {}",JsonUtil.toJson(authorities));
         return new User(adminUser.getUsername(), adminUser.getPassword(), authorities);
     }
 
